cluster/k8s/ollama/httproute-direct.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ollama-direct
  namespace: ollama
spec:
  parentRefs:
    - name: cluster-gateway
      namespace: gateway-system
  hostnames:
    - "ollama-api.allegedly.works"
  rules:
    - timeouts:
        request: "600s"
        backendRequest: "600s"
      backendRefs:
        - name: ollama
          port: 11435
